> [next-app builder 3/3] RUN npm run build:

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,25 +1,7 @@
-# Dockerignore
-
-# Git
-.git
-.gitignore
-
-# Docker
 Dockerfile
 .dockerignore
-
-# Dependencies
 node_modules
-
-# Next.js build output and cache
 .next
-next-env.d.ts
-
-# Local environment variables
-.env.local
-
-# VSCode settings
-.vscode
-
-# Readme
+.git
 README.md
+*.log
