404 issue is existing

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,10 @@ services:
     container_name: filmfriend_next_app
     ports:
       - "3000:3000"
+    volumes:
+      - ./src:/app/src
+      - /app/node_modules
+      - /app/.next
     environment:
       - DATABASE_URL=${DATABASE_URL}
       - REDIS_URL=${REDIS_URL}
