=> ERROR [next-app runner 3/5] COPY --from=builder /app/public ./public

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,36 +1,32 @@
-# Dockerfile
+# Base image for installing dependencies
+FROM node:20-alpine AS deps
+WORKDIR /app
+COPY package.json package-lock.json* ./
+RUN npm ci
 
-# 1. Builder Stage
+# Builder stage
 FROM node:20-alpine AS builder
 WORKDIR /app
-
-# Copy and install dependencies
-COPY package.json package-lock.json* ./
-RUN npm install
-
-# Copy source code
+COPY --from=deps /app/node_modules ./node_modules
 COPY . .
 
-# Build the Next.js app
+# This will build the Next.js app
 RUN npm run build
 
-# 2. Runner Stage
+# Runner stage
 FROM node:20-alpine AS runner
 WORKDIR /app
 
-# Add a non-root user
-RUN addgroup -g 1001 -S nodejs
-RUN adduser -S nextjs -u 1001
+ENV NODE_ENV=production
+# Next.js automatically sets NODE_ENV to 'production' for `npm start`
+# but it's good practice to be explicit.
 
-# Copy necessary files from the builder stage
-# Using public* makes this optional if the directory doesn't exist
-COPY --from=builder /app/public* ./public
-COPY --from=builder /app/.next/standalone ./
-COPY --from=builder /app/.next/static ./.next/static
+COPY --from=builder /app/.next ./.next
+COPY --from=builder /app/node_modules ./node_modules
+COPY --from=builder /app/package.json ./package.json
 
-# Set user and expose port
-USER nextjs
+# Expose the port Next.js runs on
 EXPOSE 3000
 
 # Start the app
-CMD ["node", "server.js"]
+CMD ["npm", "start"]
